<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/bottom_home"
        android:icon="@drawable/ic_baseline_home_filled_24"
        android:title="Home"/>

    <item android:id="@+id/bottom_addRecipe"
        android:icon="@drawable/ic_baseline_add_box_24"
        android:title="Add Recipe"/>

    <item android:id="@+id/bottom_profile"
        android:icon="@drawable/ic_baseline_profile_pin_24"
        android:title="Your Profile"/>
</menu>