...
        android:layout_width="match_parent"
        android:layout_height="320dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profilePicSection"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="12dp"
            android:layout_gravity="center"
            android:layout_weight="1">
...
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="Delete Account"
                android:backgroundTint="@color/darkRed"
                android:id="@+id/deleteAccount"
                android:layout_gravity="center"/>

        </LinearLayout>

        <!-- Profile detail-->
        <LinearLayout
...
